including popups, filters

--- a/core/sh/templates/employee/list.html
+++ b/core/sh/templates/employee/list.html
@@ -9,11 +9,12 @@
 
 {% block columns %}
 
-  <th scope="col" style="width: 25%;">Nombre y Apellido</th>
+  <th scope="col" style="width: 20%;">Nombre y Apellido</th>
+  <th scope="col" style="width: 5%;">CUIL</th>
   <th scope="col" style="width: 5%;">Usuario PC</th>
   <th scope="col" style="width: 10%;">Estado</th>
-  <th scope="col" style="width: 45%;">Oficina</th>
-  <th scope="col" style="width: 5%;">Imagen</th>
+  <th scope="col" style="width: 30%;">Oficina</th>
+  <th scope="col" style="width: 15%;">Dependencia</th>
   <th scope="col" style="width: 15%;">Opciones</th>
 
 {% endblock columns %}
