--- a/core/sh/templates/movements/list.html
+++ b/core/sh/templates/movements/list.html
@@ -9,15 +9,15 @@
 
 {% block columns %}
 
-  <th scope="col" style="width: 5%;">Id</th>
-  <th scope="col" style="width: 10%;">Dispositivo</th>
-  <th scope="col" style="width: 10%;">Oficina</th>
-  <th scope="col" style="width: 10%;">Usuario</th>
-  <th scope="col" style="width: 10%;">Movimiento</th>
-  <th scope="col" style="width: 10%;">Tecnico</th>
-  <th scope="col" style="width: 10%;">Fecha</th>
-  <th scope="col" style="width: 10%;">Inusmo Utilizado</th>
-  <th scope="col" style="width: 15%;">Opciones</th>
+    <th scope="col" style="width: 5%;">Id</th>
+    <th scope="col" style="width: 10%;">Dispositivo</th>
+    <th scope="col" style="width: 10%;">Oficina</th>
+    <th scope="col" style="width: 10%;">Usuario</th>
+    <th scope="col" style="width: 10%;">Movimiento</th>
+    <th scope="col" style="width: 10%;">Tecnico</th>
+    <th scope="col" style="width: 10%;">Fecha</th>
+    <th scope="col" style="width: 10%;">Inusmo Utilizado</th>
+    <th scope="col" style="width: 15%;">Opciones</th>
 
 {% endblock columns %}
 
@@ -30,11 +30,11 @@
 {% block add_button %}
 
 <a href="{{ create_url }}" type="button" class="btn btn-primary" id="{{btn_add_id}}">
-  <i class="fas fa-plus"></i> Agregar Movimiento
+    <i class="fas fa-plus"></i> Agregar Movimiento
 </a>
 
 {% endblock add_button %}
 
 {% block js %}
-
+    {% include 'movements/modal_details.html' %}
 {% endblock js %}
