--- a/core/sh/templates/wall_port/popup_add.html
+++ b/core/sh/templates/wall_port/popup_add.html
@@ -115,6 +115,7 @@
                 '#id_switch_port_in',
                 '#id_patch_port_in',
                 null,
+                null,
                 urls,
                 true
             );
