--- a/core/sh/templates/device/create.html
+++ b/core/sh/templates/device/create.html
@@ -66,7 +66,7 @@
                     {% endif %}
                 </div>
 
-                <div class="form-group col-6">
+                <div class="form-group mt-1 col-6">
                     <label for="id_connection_type">Tipo de Conexión:</label>
                     <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="connection_popup_add"><i class="fas fa-plus"></i></button>
                     {{ form.connection }}
@@ -354,6 +354,7 @@
   <script src="{% static 'device/js/form.js' %}"></script>
   <script>
     let modelAddUrl = "{% url 'sh:dev_model_add' %}";
+    let connectionAddUrl = "{% url 'sh:connection_type_add' %}";
     let officeAddUrl = "{% url 'sh:office_add' %}";
     let employeeAddUrl = "{% url 'sh:employee_add' %}";
     let wallPortAddUrl = "{% url 'sh:wall_port_add' %}";
